--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "nodejs",
+  "name": "bookstore",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev src/server.ts",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6",
-    "dotenv": "^16.4.5",
+    "dotenv": "^10.0.0",
     "express": "^4.21.1",
     "pg": "^8.13.1"
   },
-  "description": "",
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.6.3"
-  }
+    "@types/express": "^4.17.21",
+    "@types/jest": "^27.5.2",
+    "jest": "^27.5.1",
+    "supertest": "^6.3.4",
+    "ts-jest": "^27.1.5",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.9.5"
+  },
+  "main": "jest.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
