--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^27.5.2",
+    "@types/node": "^22.10.1",
+    "@types/pg": "^8.11.10",
     "jest": "^27.5.1",
     "supertest": "^6.3.4",
     "ts-jest": "^27.1.5",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.9.5"
   },
